fix: wrap entity type titles

--- a/aether-ui/aether/ui/assets/css/_section-entity-types.scss
+++ b/aether-ui/aether/ui/assets/css/_section-entity-types.scss
@@ -95,6 +95,7 @@
     margin-bottom: .6rem;
     font-size: $font-size-m;
     font-weight: 600;
+    overflow-wrap: break-word;
   }
 
   .name {
